# flyre

./: .gitignore  Makefile  behaviors.py  bullets.py  constants.py  enemies.py  flyre.py  level.py  main.py  objects.py  pyproject.toml  readme.md  shell.nix  spaceship.py  yzoc.py
assets/animations/: bomb.json  explosion.json  planet12.json  planet15.json  planet16.json  planet17.json  planet18.json  planet2.json  planet20.json  planet9.json
assets/fonts/: info.txt
assets/images/: bomb.ase  inforect.ase  spaceships.ase  sprites.ase
engine/: app.py  assets.py  gfx.py  object.py  particles.py  pygame_input.py  screen.py  settings.py  state_machine.py  utils.py
objects/: __init__.py  bullets.py  enemies.py  other.py  player.py  skilltree.py  spaceship.py
src/: constants.py  level.py
src/assets/: settings.json
src/assets/animations/: explosion1.json  explosion2.json  planet10.json  planet11.json  planet13.json  planet14.json  planet19.json
src/assets/images/: bomb.ase  inforect.ase  sprites.ase
src/assets/music/: cozyFractal.oga
src/engine/: __init__.py  app.py  assets.py  constants.py  gfx.py  object.py  particles.py  pygame_input.py  settings.json  settings.py  state_machine.py  utils.py
src/objects/: __init__.py  bullets.py  enemies.py  other.py  player.py  skilltree.py  spaceship.py
src/states/: __init__.py  game.py  game_over.py  highscores.py  loading.py  menu.py  my_state.py  name.py  pause.py  skillpickup.py
states/: game.py  game_over.py  loading.py  menu.py  pause.py  skillpickup.py
