[tool.poetry]
name = "Yzoc"
version = "0.1.0"
description = ""
authors = ["ddorn <diego.dorn@free.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyinstaller = "^4.2"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
